@startuml
class JavaHttpHandler [[java:structural.decorator.httpPipeline.HttpHandler.JavaHttpHandler]] {
	-client: HttpClient
	+JavaHttpHandler(client: HttpClient)
	+{static} defaultClient(): JavaHttpHandler
	+execute(request: Request): Response
	+executeAsync(request: Request): CompletableFuture<Response>
	-toHttpRequest(request: Request): HttpRequest
	-toResponse(httpResponse: HttpResponse<String>): Response
}
interface HttpHandler {
}
HttpHandler <|.. JavaHttpHandler
class TimeoutDecorator [[java:structural.decorator.httpPipeline.Decorators.TimeoutDecorator]] {
	-timeout: Duration
	+TimeoutDecorator(decoratedHandler: HttpHandler, timeout: Duration)
	+execute(request: Request): Response
	+executeAsync(request: Request): CompletableFuture<Response>
}
class HttpHandlerDecorator {
}
HttpHandlerDecorator <|-- TimeoutDecorator
class AuthenticationDecorator [[java:structural.decorator.httpPipeline.Decorators.AuthenticationDecorator]] {
	-strategy: AuthenticationStrategy
	+AuthenticationDecorator(decoratedHandler: HttpHandler, strategy: AuthenticationStrategy)
	-withAuth(request: Request): Request
	+execute(request: Request): Response
	+executeAsync(request: Request): CompletableFuture<Response>
}
class HttpHandlerDecorator {
}
HttpHandlerDecorator <|-- AuthenticationDecorator
class RetryDecorator [[java:structural.decorator.httpPipeline.Decorators.RetryDecorator]] {
	-retryPolicy: RetryPolicy
	+RetryDecorator(decoratedHandler: HttpHandler, retryPolicy: RetryPolicy)
	+execute(request: Request): Response
	+executeAsync(request: Request): CompletableFuture<Response>
	-executeWithRetry(request: Request, attempt: int): Response
	-executeAsyncWithRetry(request: Request, attempt: int): CompletableFuture<Response>
	-sleep(duration: Duration): void
	-sleepAsync(duration: Duration): CompletableFuture<Void>
}
class HttpHandlerDecorator {
}
HttpHandlerDecorator <|-- RetryDecorator
abstract class HttpHandlerDecorator [[java:structural.decorator.httpPipeline.HttpHandler.HttpHandlerDecorator]] {
	#HttpHandlerDecorator(decoratedHandler: HttpHandler)
	+execute(request: Request): Response
	+executeAsync(request: Request): CompletableFuture<Response>
}
interface HttpHandler {
}
HttpHandler <|.. HttpHandlerDecorator
interface HttpHandler [[java:structural.decorator.httpPipeline.HttpHandler.HttpHandler]] {
	execute(request: Request): Response
	executeAsync(request: Request): CompletableFuture<Response>
}
class LoggingDecorator [[java:structural.decorator.httpPipeline.Decorators.LoggingDecorator]] {
	+LoggingDecorator(decoratedHandler: HttpHandler)
	+execute(request: Request): Response
	+executeAsync(request: Request): CompletableFuture<Response>
	-logRequest(request: Request): void
	-logResponse(response: Response, duration: Duration): void
	-logFailure(error: Throwable, duration: Duration): void
}
class HttpHandlerDecorator {
}
HttpHandlerDecorator <|-- LoggingDecorator
@enduml